# tagit-gluster

./: .gitignore  README.md  compile.sh  conf-debug.txt  conf-exp.txt  conf.txt  configure.ac
api/src/: Makefile.am  glfs.c  glfs.h  xfind.c
extras/init.d/: glusterd-Debian.in
libglusterfs/src/: glusterfs.h  xlator.h
tests/mysql/: schema-mysql.sql
tools/: Makefile.am
tools/imess-cli/src/: .gitignore  Makefile.am  imess-view-db-schema.sql  ix-imess.h  ixfind  ixfind.c  ixsql-cmd.c  ixsql.c  ixsql.h  ixview.c
tools/imess-recovery/: Makefile.am
tools/imess-recovery/src/: Makefile.am  ixrecover.c  ixrecover.h
xlators/: Makefile.am
xlators/analyzethis/: Makefile.am
xlators/analyzethis/client/src/: Makefile.am  client.c  client.h
xlators/analyzethis/server/src/: Makefile.am  server.c  server.h
xlators/cluster/dht/src/: dht-common.c  dht-common.h  dht-helper.c  dht.c
xlators/features/: Makefile.am
xlators/features/changelog/lib/examples/c/: compile.sh  get-changes-multi.c  get-changes.c  get-history.c
xlators/features/changelog/src/: changelog.c
xlators/features/imess-client/: Makefile.am
xlators/features/imess-client/src/: Makefile.am  imess-client-mem-types.h  imess-client.c  imess-client.h
xlators/features/imess-server/src/: .gitignore  Makefile.am  imess-server-async.c  imess-server-ipc.c  imess-server-mem-types.h  imess-server-xdb-schema.sql  imess-server-xdb.c  imess-server-xdb.h  imess-server.c  imess-server.h
xlators/features/imess/src/: Makefile.am  imess-mem-types.h  imess.c  imess.h  logger.c  logger.h  xdb-schema.c  xdb-schema.sql  xdb.c  xdb.h
xlators/meta/src/: Makefile.am  analyzethis-jobs.c  analyzethis-self.c  analyzethis-submit.c  analyzethis.c  imess-create-view.c  imess-debug.c  imess-tags.c  imess-views-db.c  imess-views.c  imess.c  meta-hooks.h  meta.c  meta.h  root-dir.c
xlators/storage/posix/src/: posix-helpers.c
